--- a/tudp-info.yaml
+++ b/tudp-info.yaml
@@ -1,8 +1,8 @@
 apiVersion: backstage.io/v1alpha1
 kind: Location
 metadata:
-  name: yelb-catalog-info
-  description: A sample catalog for the yelb application
+  name: tudp-info
+  description: A sample catalog for the tudb application
   annotations:
     'backstage.io/techdocs-ref': dir:.
 spec:
