--- a/components/vmware-sso-integrations/integration-tasks.yaml
+++ b/components/vmware-sso-integrations/integration-tasks.yaml
@@ -1,12 +1,12 @@
 apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
-  name: amjs-test
-  description: AMJS  App
+  name: integration-tasks
+  description: Integrations Tasks
   tags:
     - javascript
   annotations:
-    'backstage.io/kubernetes-label-selector': 'app=amjs-test,tier=frontend'
+    'backstage.io/kubernetes-label-selector': 'app=integrations-tasks'
     'backstage.io/techdocs-ref': dir:.
   links:
     - url: https://yelb-ui.example.com
@@ -16,5 +16,5 @@ spec:
   type: service
   lifecycle: experimental
   owner: tas-dev-ex
-  system: amjs-test-space
-  dependsOn: [Component:amjs-test-api-app]
+  system: vmware-sso-integrations
+  consumesApi: [Component:integration-api]
